-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
CentOS 6.6, 2.6.32-504.el6.x86_64, Lustre 2.7.56 / ZFS
(used Lustre 2.8 version as is closest to actual version)
-
3
-
9223372036854775807
LFS performing normally. Admin issues lctl commands which result in segfaults.
'lctl network peer_list'
'lctl network conn_list'
each result in segfaults.
Attached core file resulting from 'lctl network peer_list' executed on an OSS node.
- mentioned in
-
Page Loading...